# job-application-assistant

./: README.md
backend/: main.py  pyproject.toml
backend/interfaces/: job.py  manager.py
backend/services/: manager.py
backend/services/utils/: auth.py  parser.py  retriever.py  terms.py
