[tool.poetry]
name = "backend-job-app-assistant"
version = "0.1.0"
description = ""
authors = ["Lazbert <85731679+Lazbert@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.19.0"
pydantic = "^2.6.4"
chromedriver-py = "123.0.6312.105"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
